--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,52 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Molle&family=Montserrat&display=swap');
+
+/* Global Styles */
+
+:root {
+    --yellow: #F6D64A;
+    --teal: #55BCD5;
+    --purple: #9B26B0;
+    --blue: #499BD2;
+    --dark-gray: #222222;
+    --light-gray: #EAEAEA;
+    --white: #FFFFFF;
+    --black: #000000;
+    --heading-font: 'Molle', cursive;
+    --body-font: 'Montserrat', sans-serif;
+}
+
+.sr-only, #skip {
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+}
+
+h1 {
+	font-family: var(--heading-font);
+	font-size: 3.5em;
+}
+
+body {
+	font-family: var(--body-font);
+	line-height: 1.25;
+	margin: 0 auto;		
+	padding: 0;
+}
+
+header {
+	width: 100%;
+	padding: 1rem 0;		
+	display: flex;
+	flex-direction: column;
+	background-image: linear-gradient(var(--teal),var(--white));
+}
+
+/* Menu Styles*/
+
