--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,47 @@ header {
 
 /* Menu Styles*/
 
+#menu-toggle {
+    display: block;
+    position: relative;
+    top: 50px;
+    left: 50px;  
+    z-index: 1;  
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+#menu-toggle input {
+    display: block;
+    width: 165px;
+    height: 54px;
+    position: absolute;
+    top: -18em;
+    left: 18em; 
+    padding: 0;
+    cursor: pointer;  
+    opacity: 0; 
+    z-index: 2; 
+    -webkit-touch-callout: none;
+}
+  
+#menu-toggle label {
+    position: relative;
+    display: block;
+    width: 30%;
+    height: 30px;
+    background: var(--yellow);
+    color:#222222;
+    font-weight: 600;
+    text-align: center;
+    padding: 10px;
+    padding: 0.75em;
+    top: -15em;
+    left: 15em;
+}
+
+#menu-toggle label span {
+    display: none;
+  }
