--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ header {
     width: 30%;
     height: 30px;
     background: var(--yellow);
-    color:#222222;
+    color:var(--dark-gray);
     font-weight: 600;
     text-align: center;
     padding: 10px;
@@ -142,4 +142,22 @@ header {
 
 #menu-toggle label span {
     display: none;
+}
+
+nav li {
+	background-color: var(--teal);
+    padding: 20px 0px;
+    border: 1px solid var(--black);
+}
+
+nav a {
+	color: var(--black);
+	text-decoration: none;
+	font-weight: bold;
+	letter-spacing: 1px;
+	font-size: 1.15rem;
+}  
+  nav a:hover{
+    background-color: var(--yellow);
+    color: var(--black);
   }
