--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 /* Gabriela Castillo-Londono*/
 
+@import url('https://fonts.googleapis.com/css2?family=Molle&family=Montserrat&display=swap');
+
 /* --------------- CSS RESET --------------- */
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -28,6 +30,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
+
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -50,8 +53,6 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Molle&family=Montserrat&display=swap');
 
 /* Global Styles */
 
@@ -77,87 +78,996 @@ table {
     overflow:hidden;
 }
 
-h1 {
-	font-family: var(--heading-font);
-	font-size: 3.5em;
-}
+#skip:focus {
+	position: static;
+  }
 
-body {
-	font-family: var(--body-font);
-	line-height: 1.25;
-	margin: 0 auto;		
-	padding: 0;
-}
-
-header {
-	width: 100%;
-	padding: 1rem 0;		
-	display: flex;
-	flex-direction: column;
-	background-image: linear-gradient(var(--teal),var(--white));
-}
-
-/* Menu Styles*/
-
-#menu-toggle {
-    display: block;
-    position: relative;
-    top: 50px;
-    left: 50px;  
-    z-index: 1;  
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-#menu-toggle input {
-    display: block;
-    width: 165px;
-    height: 54px;
-    position: absolute;
-    top: -18em;
-    left: 18em; 
-    padding: 0;
-    cursor: pointer;  
-    opacity: 0; 
-    z-index: 2; 
-    -webkit-touch-callout: none;
-}
+  ody {
+	overflow-x: hidden;
+	list-style: none;
+	background-color: #ffffff;
+	font-family: "Montserrat", sans-serif;
+	color: #222222;
+	line-height: 1.5;
+	font-weight: 500;
+  }
   
-#menu-toggle label {
-    position: relative;
-    display: block;
-    width: 30%;
-    height: 30px;
-    background: var(--yellow);
-    color:var(--dark-gray);
-    font-weight: 600;
-    text-align: center;
-    padding: 10px;
-    padding: 0.75em;
-    top: -15em;
-    left: 15em;
-}
-
-#menu-toggle label span {
-    display: none;
-}
-
-nav li {
-	background-color: var(--teal);
-    padding: 20px 0px;
-    border: 1px solid var(--black);
-}
-
-nav a {
-	color: var(--black);
+  a {
 	text-decoration: none;
-	font-weight: bold;
-	letter-spacing: 1px;
-	font-size: 1.15rem;
-}  
-  nav a:hover {
-    background-color: var(--yellow);
-    color: var(--black);
-}
+  }
+  
+  h2,
+  h3 {
+	font-size: 50px;
+  }
+  
+  h1,
+  h2,
+  h3 {
+	font-family: "Molle", cursive;
+  }
+  
+  p,
+  h4,
+  small,
+  button,
+  nav,
+  q,
+  form {
+	font-family: "Montserrat", sans-serif;
+  }
+  
+  img {
+	height: auto;
+	display: block;
+	max-width: 100%;
+  }
+  
+  h4 {
+	font-size: 26px;
+	font-weight: 700;
+  }
+  
+  header {
+	background-image: linear-gradient(to bottom, #55bcd5, #ffffff);
+	text-align: left;
+  }
+  
+  header h1 {
+	font-size: 45px;
+  }
+  
+  header p {
+	font-size: 20px;
+	margin-bottom: 20px;
+  }
+  
+  #menu-toggle input {
+	display: none;
+  }
+  
+  nav {
+	margin-bottom: 10px;
+  }
+  
+  header {
+	text-align: left;
+	background-image: linear-gradient(to bottom, #55bcd5, #ffffff);
+  }
+  
+  #intro p {
+	text-align: left;
+	margin-bottom: 10px;
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+  }
+  
+  #logo {
+	display: inline-block;
+  }
+  
+  #intro h2 {
+	text-align: left;
+	padding-left: 1.5rem;
+  }
+  
+  header p {
+	font-size: 18px;
+	margin-bottom: 10px;
+  }
+  
+  #intro img {
+	width: 100%;
+	height: auto;
+	display: block;
+	margin-bottom: 15px;
+  }
+  
+  #menu-toggle label {
+	display: block;
+	font-size: 20px;
+	cursor: pointer;
+	padding: 7px 10px;
+	background-color: #f6d64a;
+  }
+  
+  #menu-toggle ul {
+	display: none;
+	color: #000000;
+	list-style-type: none;
+	background-color: #55bcd5;
+  }
+  
+  #menu-toggle li a {
+	display: block;
+	font-size: 10px;
+	padding: 10px 10px;
+	color: #000000;
+	text-transform: uppercase;
+  }
+  
+  #menu-toggle input:checked ~ ul {
+	display: block;
+  }
+  
+  h4 {
+	font-weight: 700;
+	font-size: 25px;
+  }
+  
+  #intro picture {
+	width: 100%;
+	height: auto;
+	display: block;
+	margin-bottom: 25px;
+  }
+  
+  header h1 {
+	font-size: 45px;
+  }
+  
+  img {
+	height: auto;
+	display: block;
+	max-width: 100%;
+  }
+  
+  /* ------------------- */
+  #plan {
+	background-color: #f6d64a;
+	display: grid;
+	align-items: center;
+	justify-content: center;
+	padding: 10px;
+	grid-gap: 10px;
+	grid-template-columns: 1;
+	grid-template-rows: 2;
+  }
+  
+  #plan h3 {
+	text-align: left;
+	grid-row: 1;
+	grid-column: 1;
+	font-size: 35px;
+  }
+  
+  #plan div section h4 {
+	margin-bottom: 15px;
+	text-align: center;
+	text-transform: uppercase;
+  }
+  
+  #plan div section {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	width: 300px;
+	height: 300px;
+	border-radius: 20px;
+	margin-bottom: 10px;
+	background-color: #55bcd5;
+	border: 2px solid #ffffff;
+  }
+  
+  #plan div section img {
+	height: 90%;
+	width: 90%;
+  }
+  
+  /* ------------------- */
+  
+  #testimonials h3 {
+	margin-top: 25px;
+	margin-left: 25px;
+	text-align: left;
+	font-size: 25px;
+	margin-bottom: 0px;
+  }
+  
+  #testimonials section {
+	text-align: center;
+	margin: 25px;
+  }
+  
+  #testimonials h4 {
+	margin-top: 10px;
+	text-transform: uppercase;
+  }
+  
+  #testimonials q {
+	font-style: italic;
+  }
+  
+  #testimonials img {
+	display: block;
+	margin: 0 auto;
+  }
+  
+  /* ------------------- */
+  
+  #about {
+	background-color: #499bd2;
+  }
+  
+  #about h3 {
+	text-align: left;
+	padding: 25px;
+  }
+  
+  #about section {
+	box-sizing: border-box;
+	text-align: center;
+	width: 50%;
+	padding: 10px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+  }
+  
+  #about div {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 25px;
+	padding-left: 25px;
+	padding-right: 25px;
+	justify-content: space-between;
+  }
+  
+  #about h4 {
+	font-size: 17px;
+	text-transform: uppercase;
+  }
+  
+  #about h3 {
+	color: black;
+	font-size: 35px;
+  }
+  
+  #about img {
+	margin-bottom: 10px;
+	width: 90px;
+	height: 90px;
+  }
+  /* ------------------- */
+  
+  #contact {
+	width: 90%;
+	margin: auto;
+  }
+  
+  #contact h3 {
+	font-size: 25px;
+	margin-top: 25px;
+	text-align: left;
+	text-transform: uppercase;
+  }
+  
+  .form-required {
+	font-size: 15px;
+	font-weight: 400;
+	font-style: italic;
+	font-family: "Montserrat", sans-serif;
+  }
+  
+  .required {
+	color: #9b26b0;
+  }
+  
+  #contact label {
+	display: flex;
+	font-size: 25px;
+	font-weight: 700;
+	align-items: center;
+	text-transform: uppercase;
+  }
+  
+  #contact legend {
+	font-size: 25px;
+	font-weight: 700;
+	text-transform: uppercase;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  .custom-select select {
+	width: 100%;
+	padding: 10px;
+	display: block;
+	font-size: 16px;
+	margin-bottom: 10px;
+	box-sizing: border-box;
+	border: 2px solid #9b26b0;
+  }
+  
+  .radio-label {
+	display: flex;
+	margin-left: 10px;
+	margin-bottom: 5px;
+	align-items: center;
+  }
+  
+  fieldset {
+	margin: 0;
+	padding: 0;
+	border: none;
+  }
+  
+  .radio-input input {
+	display: none;
+  }
+  
+  .radio-control {
+	width: 45px;
+	height: 45px;
+	border-radius: 50%;
+	position: relative;
+	display: inline-block;
+	border: 4px solid #9b26b0;
+  }
+  
+  .radio-input input:checked + .radio-control::before {
+	top: 50%;
+	left: 50%;
+	width: 25px;
+	content: "";
+	height: 25px;
+	border-radius: 50%;
+	position: absolute;
+	background-color: #9b26b0;
+	transform: translate(-50%, -50%);
+  }
+  
+  .custom-select {
+	width: 100%;
+	display: block;
+	position: relative;
+  }
+  
+  .custom-select select {
+	width: 100%;
+	padding: 10px;
+	font-size: 16px;
+	appearance: none;
+	box-sizing: border-box;
+	border: 2px solid #9b26b0;
+  }
+  
+  .custom-select .focus {
+	width: 0;
+	height: 0;
+	right: 10px;
+	position: absolute;
+	margin-right: 25px;
+	top: 45%;
+	pointer-events: none;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-top: 10px solid #9b26b0;
+  }
+  
+  input[type="submit"] {
+	width: 100%;
+	border: none;
+	padding: 25px;
+	display: block;
+	cursor: pointer;
+	font-size: 16px;
+	margin-bottom: 25px;
+	color: #ffffff;
+	text-transform: uppercase;
+	background-color: #9b26b0;
+  }
+  
+  /* ------------------- */
+  footer {
+	padding: 25px;
+	text-align: center;
+	background-color: #eaeaea;
+	font-family: "Montserrat", sans-serif;
+  }
+  
+  footer a {
+	display: flex;
+	padding-top: 5px;
+	color: #000000;
+	align-items: center;
+	text-decoration: none;
+	flex-direction: column;
+	justify-content: center;
+  }
+  
+  @media screen and (min-width: 700px) {
+	header {
+	  padding: 10px;
+	  display: grid;
+	  align-items: center;
+	  grid-template-columns: 200px auto;
+	  grid-template-rows: auto auto auto;
+	}
+  
+	#logo {
+	  grid-column: 1;
+	  grid-row: 1 / 3;
+	}
+  
+	h1,
+	p {
+	  margin: 0;
+	  padding: 0;
+	}
+  
+	h1 {
+	  grid-row: 1;
+	  grid-column: 2;
+	  margin-top: 45px;
+	}
+  
+	p {
+	  grid-row: 2;
+	  grid-column: 2;
+	}
+  
+	nav {
+	  margin-top: 25px;
+	  grid-row: 3;
+	  grid-column: 1 / 3;
+	}
+  
+	#menu-toggle label {
+	  display: none;
+	}
+  
+	#menu-toggle ul {
+	  padding: 0;
+	  display: flex;
+	  justify-content: center;
+	  background-color: transparent;
+	}
+  
+	#menu-toggle li {
+	  margin: 0 10px;
+	  font-size: 15px;
+	  cursor: pointer;
+	  padding: 5px 5px;
+	  font-weight: bold;
+	  text-align: center;
+	  white-space: nowrap;
+	  background-color: #ffffff;
+	  font-family: "Montserrat", sans-serif;
+	}
+  
+	#menu-toggle .active {
+	  background-color: #f6d64a;
+	}
+  
+	#intro {
+	  display: grid;
+	  grid-template-columns: auto auto;
+	  grid-template-rows: auto auto auto;
+	}
+  
+	#intro h2 {
+	  grid-row: 1;
+	  text-align: left;
+	  margin-left: 25px;
+	  grid-column: 1 / 3;
+	  margin-right: 25px;
+	}
+  
+	#intro p {
+	  grid-row: 2;
+	  text-align: left;
+	  margin-left: 25px;
+	  margin-right: 25px;
+	  grid-column: 1 / 3;
+	}
+  
+	#img-grid {
+	  grid-row: 3;
+	  display: grid;
+	  column-gap: 15px;
+	  margin-left: 45px;
+	  grid-column: 1 / 3;
+	  margin-right: 45px;
+	  padding-left: 15px;
+	  padding-right: 15px;
+	  grid-template-rows: auto auto;
+	  grid-template-columns: auto auto;
+	}
+  
+	#img-grid picture {
+	  grid-row: 2;
+	  grid-column: 1 / 3;
+	  margin-bottom: 5px;
+	}
+  
+	#img-grid img {
+	  gap: 60px;
+	  display: flex;
+	  align-items: center;
+	  justify-content: center;
+	}
+  
+	#plan {
+	  padding: 25px;
+	  text-align: center;
+	  background-color: #f6d64a;
+	}
+  
+	#plan h3 {
+	  text-align: left;
+	  margin-left: 5px;
+	}
+  
+	#plan div {
+	  gap: 25px;
+	  display: flex;
+	  justify-content: center;
+	  flex-wrap: wrap;
+	}
+  
+	#plan div section h4 {
+	  text-align: center;
+	  margin-bottom: 10px;
+	  color: #000000;
+	}
+  
+	#plan div section {
+	  width: 300px;
+	  height: 300px;
+	  padding: 15px;
+	  width: 45%;
+	  border-radius: 10px;
+	  box-sizing: border-box;
+	  background-color: #55bcd5;
+	  border: 3px solid #ffffff;
+	  justify-content: space-between;
+	}
+  
+	#plan div section a {
+	  display: block;
+	  text-align: center;
+	}
+  
+	#testimonials {
+	  padding: 25px;
+	  text-align: center;
+	}
+  
+	#plan div section img {
+	  max-width: auto;
+	  height: auto;
+	}
+  
+	#testimonials h3 {
+	  text-align: left;
+	  margin-bottom: 5px;
+	}
+  
+	#testimonials section {
+	  width: 40%;
+	  border-radius: 10px;
+	  box-sizing: border-box;
+	  border: 1px solid #ffffff;
+	}
+  
+	#testimonials div {
+	  display: flex;
+	  flex-wrap: wrap;
+	  justify-content: center;
+	}
+  
+	#about {
+	  padding-left: 50px;
+	  padding-right: 50px;
+	  color: #ffffff;
+	  background-color: #499bd2;
+	}
+  
+	#about div {
+	  display: flex;
+	  justify-content: center;
+	}
+  
+	#about h3 {
+	  text-align: left;
+	}
+  
+	#about section {
+	  text-align: center;
+	  flex: 1;
+	}
+  
+	#contact {
+	  width: 90%;
+	  margin: 0 auto;
+	}
+  
+	#about section img {
+	  width: 150px;
+	  height: 150px;
+	  margin: 0 auto 10px;
+	}
+  
+	#contact fieldset {
+	  gap: 45px;
+	  display: flex;
+	  justify-content: flex-start;
+	}
+  
+	#contact h3 {
+	  text-align: left;
+	}
+  
+	#contact label {
+	  display: flex;
+	  align-items: center;
+	}
+  
+	.form-required {
+	  font-size: 15px;
+	  font-weight: 400;
+	  font-family: "Montserrat", sans-serif;
+	  font-style: italic;
+	}
+  
+	#nums label {
+	  display: flex;
+	  align-items: center;
+	  font-size: 25px;
+	  font-weight: 700;
+	}
+  
+	.required {
+	  color: #9b26b0;
+	}
+  
+	#contact legend {
+	  font-size: 25px;
+	  font-weight: 700;
+	}
+  
+	input[type="email"],
+	input[type="text"],
+	input[type="tel"],
+	.custom-select select {
+	  width: 100%;
+	  display: block;
+	  padding: 15px;
+	  font-size: 15px;
+	  margin-bottom: 20px;
+	  border: 2px solid #9b26b0;
+	  box-sizing: border-box;
+	}
+  
+	.radio-label {
+	  display: flex;
+	  align-items: center;
+	  margin-left: 5px;
+	  margin-top: -20px;
+	}
+  
+	fieldset {
+	  margin: 0;
+	  padding: 0;
+	  border: none;
+	}
+  
+	.radio-control {
+	  display: inline-block;
+	  width: 45px;
+	  height: 45px;
+	  position: relative;
+	  border-radius: 50%;
+	  border: 4px solid #9b26b0;
+	  margin-bottom: 16px;
+	}
+  
+	.custom-select {
+	  width: 100%;
+	  position: relative;
+	}
+  
+	input[type="submit"] {
+	  width: 50%;
+	  border: none;
+	  padding: 25px;
+	  cursor: pointer;
+	  font-size: 20px;
+	  margin-left: 50%;
+	  margin-top: 25px;
+	  font-weight: bold;
+	  margin-bottom: 25px;
+	  color: #ffffff;
+	  background-color: #9b26b0;
+	}
+  
+	footer {
+	  font-family: "Montserrat", sans-serif;
+	  gap: 25px;
+	  text-align: center;
+	  background-color: #eaeaea;
+	  display: flex;
+	  align-items: center;
+	  justify-content: center;
+	}
+  
+	footer a {
+	  color: #000000;
+	  text-decoration: none;
+	}
+  }
+  
+  @media screen and (min-width: 1335px) {
+	#logo {
+	  grid-column: 1;
+	  grid-row: 1 / 4;
+	}
+	header {
+	  display: grid;
+	  align-items: center;
+	  grid-template-rows: auto auto auto;
+	  grid-template-columns: 200px auto auto;
+	}
+  
+	h1 {
+	  grid-row: 1;
+	  grid-column: 2;
+	  margin-top: 25px;
+	  margin: 0;
+	  padding: 0;
+	}
+  
+	p {
+	  margin: 0;
+	  padding: 0;
+	  grid-row: 2;
+	  grid-column: 2;
+	}
+  
+	nav {
+	  grid-row: 1;
+	  grid-column: 3;
+	  margin-top: -50px;
+	  justify-self: end;
+	  justify-self: end;
+	}
+  
+	#menu-toggle li {
+	  padding: 1px;
+	}
+  
+	#intro h2 {
+	  grid-row: 1;
+	  grid-column: 1;
+	  margin-top: -25px;
+	  text-align: left;
+	}
+  
+	#intro p {
+	  grid-row: 2;
+	  grid-column: 1;
+	  text-align: left;
+	}
+  
+	#intro {
+	  display: grid;
+	  margin-top: 50px;
+	  grid-template-columns: auto auto;
+	  grid-template-rows: auto auto auto;
+	}
+  
+	#img-grid {
+	  display: grid;
+	  grid-row: 1 / 4;
+	  grid-column: 2;
+	  column-gap: 25px;
+	  grid-template-rows: auto auto;
+	  grid-template-columns: auto auto;
+	  padding-left: 10px;
+	  padding-right: 10px;
+	}
+  
+	#img-grid img {
+	  gap: 45px;
+	  display: flex;
+	  align-items: center;
+	  justify-content: center;
+	}
+  
+	#img-grid picture {
+	  grid-column: 1 / 3;
+	  grid-row: 2;
+	  margin-bottom: 10px;
+	}
+  
+	#plan {
+	  padding: 25px;
+	  text-align: center;
+	  background-color: #f6d64a;
+	}
+  
+	#plan div {
+	  gap: 25px;
+	  display: flex;
+	  flex-wrap: nowrap;
+	  justify-content: center;
+	  margin-left: 45px;
+	  margin-right: 45px;
+	  margin-bottom: 45px;
+	}
+  
+	#plan h3 {
+	  text-align: left;
+	  margin-top: 45px;
+	  margin-left: 45px;
+	  margin-bottom: 25px;
+	}
+  
+	#plan div section {
+	  width: 300px;
+	  height: 300px;
+	  width: 40%;
+	  padding: 15px;
+	  border-radius: 10px;
+	  box-sizing: border-box;
+	  background-color: #55bcd5;
+	  border: 2px solid #ffffff;
+	}
+  
+	#plan div section h4 {
+	  text-align: center;
+	  margin-bottom: 10px;
+	  color: #000000;
+	}
+  
+	#testimonials {
+	  padding: 25px;
+	  text-align: center;
+	}
+  
+	#testimonials h3 {
+	  text-align: left;
+	  margin-top: 45px;
+	  margin-left: 45px;
+	  margin-bottom: 5px;
+	}
+  
+	#testimonials div {
+	  display: flex;
+	  flex-wrap: nowrap;
+	  margin-left: 45px;
+	  margin-right: 45px;
+	  justify-content: center;
+	}
+  
+	#testimonials section {
+	  width: 45%;
+	  border-radius: 20px;
+	  margin-bottom: 40px;
+	  box-sizing: border-box;
+	  border: 1px solid #ffffff;
+	}
+  
+	#about {
+	  padding-top: 50px;
+	  padding-left: 50px;
+	  padding-right: 50px;
+	  color: #ffffff;
+	  padding-bottom: 50px;
+	  background-color: #499bd2;
+	}
+  
+	#about h3 {
+	  text-align: left;
+	  font-size: 25px;
+	}
+  
+	#about div {
+	  display: flex;
+	  margin: auto;
+	  justify-content: center;
+	}
+  
+	#about section {
+	  text-align: center;
+	  flex: 1;
+	}
+  
+	#about section img {
+	  width: 150px;
+	  height: 150px;
+	  display: block;
+	  margin: 0 auto 10px;
+	}
+  
+	form {
+	  display: grid;
+	  grid-template-columns: 1fr 1fr 1fr;
+	  grid-template-rows: auto;
+	}
+  
+	form #nums {
+	  display: flex;
+	  flex-direction: column;
+	  grid-row: 1;
+	  grid-column: 2;
+	  margin-right: 25px;
+	}
+  
+	form #names {
+	  display: flex;
+	  flex-direction: column;
+	  grid-row: 1;
+	  grid-column: 1;
+	  margin-right: 25px;
+	}
+  
+	#contact h3 {
+	  margin-top: 60px;
+	}
+  
+	input[type="submit"] {
+	  width: 50%;
+	  padding: 15px;
+	  margin-bottom: 80px;
+	}
+  
+	form #selects {
+	  grid-row: 1;
+	  grid-column: 3;
+	  flex-direction: column;
+	  display: flex;
+	}
+  
+	.custom-select .focus {
+	  top: 30%;
+	}
+	footer {
+	  display: flex;
+	  justify-content: center;
+	  align-items: center;
+	  padding: 20px;
+	  color: #000000;
+	  background-color: #eaeaea;
+	}
+  
+	footer p {
+	  margin-top: 20px;
+	  margin-bottom: 20px;
+	  margin-left: 100px;
+	  margin-right: auto;
+	}
+  
+	footer a {
+	  margin-top: 20px;
+	  margin-bottom: 20px;
+	  color: #000000;
+	  margin-right: 100px;
+	  text-decoration: none;
+	}
+  }
