--- a/styles.css
+++ b/styles.css
@@ -82,159 +82,160 @@ table {
 	position: static;
   }
 
-  ody {
+body {
 	overflow-x: hidden;
 	list-style: none;
-	background-color: #ffffff;
-	font-family: "Montserrat", sans-serif;
-	color: #222222;
+	background-color: var(--white);
+	font-family: var(--body-font), sans-serif;
+	color: var(--dark-gray);
 	line-height: 1.5;
 	font-weight: 500;
-  }
+}
   
-  a {
+a {
 	text-decoration: none;
-  }
+}
   
-  h2,
-  h3 {
+h2,
+h3 {
 	font-size: 50px;
-  }
+}
   
-  h1,
-  h2,
-  h3 {
-	font-family: "Molle", cursive;
-  }
+h1,
+h2,
+h3 {
+	font-family: var(--heading-font), cursive;
+}
   
-  p,
-  h4,
-  small,
-  button,
-  nav,
-  q,
-  form {
-	font-family: "Montserrat", sans-serif;
-  }
+p,
+h4,
+small,
+button,
+nav,
+q,
+form {
+	font-family: var(--body-font), sans-serif;
+}
   
-  img {
+img {
 	height: auto;
 	display: block;
 	max-width: 100%;
-  }
+}
   
-  h4 {
+h4 {
 	font-size: 26px;
 	font-weight: 700;
-  }
+}
   
-  header {
-	background-image: linear-gradient(to bottom, #55bcd5, #ffffff);
+header {
+	background-image: linear-gradient(to bottom, var(--teal), var(--white));
 	text-align: left;
-  }
+}
   
-  header h1 {
+header h1 {
 	font-size: 45px;
   }
   
-  header p {
+header p {
 	font-size: 20px;
 	margin-bottom: 20px;
-  }
+}
   
-  #menu-toggle input {
+#menu-toggle input {
 	display: none;
-  }
+}
   
-  nav {
+nav {
 	margin-bottom: 10px;
-  }
+}
   
-  header {
+header {
 	text-align: left;
-	background-image: linear-gradient(to bottom, #55bcd5, #ffffff);
-  }
+	background-image: linear-gradient(to bottom, var(--teal), var(--white));
+}
   
-  #intro p {
+#intro p {
 	text-align: left;
 	margin-bottom: 10px;
 	padding-left: 1.5rem;
 	padding-right: 1.5rem;
-  }
+}
   
-  #logo {
+#logo {
 	display: inline-block;
-  }
+}
   
-  #intro h2 {
+#intro h2 {
 	text-align: left;
 	padding-left: 1.5rem;
-  }
+}
   
-  header p {
+header p {
 	font-size: 18px;
 	margin-bottom: 10px;
-  }
+}
   
-  #intro img {
+#intro img {
 	width: 100%;
 	height: auto;
 	display: block;
 	margin-bottom: 15px;
-  }
+}
   
-  #menu-toggle label {
+#menu-toggle label {
 	display: block;
 	font-size: 20px;
 	cursor: pointer;
 	padding: 7px 10px;
-	background-color: #f6d64a;
-  }
+	background-color: var(--yellow);
+}
   
-  #menu-toggle ul {
+#menu-toggle ul {
 	display: none;
-	color: #000000;
+	color: var(--black);
 	list-style-type: none;
-	background-color: #55bcd5;
-  }
+	background-color: var(--teal);
+}
   
-  #menu-toggle li a {
+#menu-toggle li a {
 	display: block;
 	font-size: 10px;
 	padding: 10px 10px;
-	color: #000000;
+	color: var(--black);
 	text-transform: uppercase;
-  }
+}
   
-  #menu-toggle input:checked ~ ul {
+ #menu-toggle input:checked ~ ul {
 	display: block;
-  }
+}
   
-  h4 {
+h4 {
 	font-weight: 700;
 	font-size: 25px;
-  }
+}
   
-  #intro picture {
+#intro picture {
 	width: 100%;
 	height: auto;
 	display: block;
 	margin-bottom: 25px;
-  }
+}
   
   header h1 {
 	font-size: 45px;
-  }
+}
   
-  img {
+img {
 	height: auto;
 	display: block;
 	max-width: 100%;
-  }
+}
   
-  /* ------------------- */
-  #plan {
-	background-color: #f6d64a;
+/* plan section */
+
+#plan {
+	background-color: var(--yellow);
 	display: grid;
 	align-items: center;
 	justify-content: center;
@@ -242,22 +243,22 @@ table {
 	grid-gap: 10px;
 	grid-template-columns: 1;
 	grid-template-rows: 2;
-  }
+}
   
-  #plan h3 {
+#plan h3 {
 	text-align: left;
 	grid-row: 1;
 	grid-column: 1;
 	font-size: 35px;
-  }
+}
   
-  #plan div section h4 {
+#plan div section h4 {
 	margin-bottom: 15px;
 	text-align: center;
 	text-transform: uppercase;
-  }
+}
   
-  #plan div section {
+#plan div section {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -266,56 +267,56 @@ table {
 	height: 300px;
 	border-radius: 20px;
 	margin-bottom: 10px;
-	background-color: #55bcd5;
-	border: 2px solid #ffffff;
+	background-color: var(--teal);
+	border: 2px solid var(--white);
   }
   
-  #plan div section img {
+#plan div section img {
 	height: 90%;
 	width: 90%;
-  }
+}
   
-  /* ------------------- */
+/* testimonial section */
   
-  #testimonials h3 {
+#testimonials h3 {
 	margin-top: 25px;
 	margin-left: 25px;
 	text-align: left;
 	font-size: 25px;
 	margin-bottom: 0px;
-  }
+}
   
-  #testimonials section {
+#testimonials section {
 	text-align: center;
 	margin: 25px;
-  }
+}
   
-  #testimonials h4 {
+#testimonials h4 {
 	margin-top: 10px;
 	text-transform: uppercase;
-  }
+}
   
-  #testimonials q {
+#testimonials q {
 	font-style: italic;
-  }
+}
   
-  #testimonials img {
+#testimonials img {
 	display: block;
 	margin: 0 auto;
-  }
+}
   
-  /* ------------------- */
+/* about section */
   
-  #about {
-	background-color: #499bd2;
-  }
+#about {
+	background-color: var(--blue);
+}
   
-  #about h3 {
+#about h3 {
 	text-align: left;
 	padding: 25px;
-  }
+}
   
-  #about section {
+#about section {
 	box-sizing: border-box;
 	text-align: center;
 	width: 50%;
@@ -325,111 +326,112 @@ table {
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
-  }
+}
   
-  #about div {
+#about div {
 	display: flex;
 	flex-wrap: wrap;
 	padding: 25px;
 	padding-left: 25px;
 	padding-right: 25px;
 	justify-content: space-between;
-  }
+}
   
-  #about h4 {
+#about h4 {
 	font-size: 17px;
 	text-transform: uppercase;
-  }
+}
   
-  #about h3 {
+#about h3 {
 	color: black;
 	font-size: 35px;
-  }
+}
   
-  #about img {
+#about img {
 	margin-bottom: 10px;
 	width: 90px;
 	height: 90px;
-  }
-  /* ------------------- */
+}
+
+/* contact section */
   
-  #contact {
+#contact {
 	width: 90%;
 	margin: auto;
-  }
+}
   
-  #contact h3 {
+#contact h3 {
 	font-size: 25px;
 	margin-top: 25px;
 	text-align: left;
 	text-transform: uppercase;
-  }
+}
   
-  .form-required {
+.form-required {
 	font-size: 15px;
 	font-weight: 400;
 	font-style: italic;
-	font-family: "Montserrat", sans-serif;
-  }
+	font-family: var(--body-font), sans-serif;
+}
   
-  .required {
-	color: #9b26b0;
-  }
+.required {
+	color: var(--purple);
+}
   
-  #contact label {
+#contact label {
 	display: flex;
 	font-size: 25px;
 	font-weight: 700;
 	align-items: center;
 	text-transform: uppercase;
-  }
+}
   
-  #contact legend {
+#contact legend {
 	font-size: 25px;
 	font-weight: 700;
 	text-transform: uppercase;
-  }
+}
   
-  input[type="text"],
-  input[type="email"],
-  input[type="tel"],
-  .custom-select select {
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+.custom-select select {
 	width: 100%;
 	padding: 10px;
 	display: block;
 	font-size: 16px;
 	margin-bottom: 10px;
 	box-sizing: border-box;
-	border: 2px solid #9b26b0;
-  }
+	border: 2px solid var(--purple);
+}
   
-  .radio-label {
+.radio-label {
 	display: flex;
 	margin-left: 10px;
 	margin-bottom: 5px;
 	align-items: center;
-  }
+}
   
-  fieldset {
+fieldset {
 	margin: 0;
 	padding: 0;
 	border: none;
-  }
+}
   
-  .radio-input input {
+.radio-input input {
 	display: none;
-  }
+}
   
-  .radio-control {
+.radio-control {
 	width: 45px;
 	height: 45px;
 	border-radius: 50%;
 	position: relative;
 	display: inline-block;
-	border: 4px solid #9b26b0;
-  }
+	border: 4px solid var(--purple);
+}
   
-  .radio-input input:checked + .radio-control::before {
+.radio-input input:checked + .radio-control::before {
 	top: 50%;
 	left: 50%;
 	width: 25px;
@@ -437,26 +439,26 @@ table {
 	height: 25px;
 	border-radius: 50%;
 	position: absolute;
-	background-color: #9b26b0;
+	background-color: var(--purple);
 	transform: translate(-50%, -50%);
   }
   
-  .custom-select {
+.custom-select {
 	width: 100%;
 	display: block;
 	position: relative;
-  }
+}
   
-  .custom-select select {
+.custom-select select {
 	width: 100%;
 	padding: 10px;
 	font-size: 16px;
 	appearance: none;
 	box-sizing: border-box;
-	border: 2px solid #9b26b0;
-  }
+	border: 2px solid var(--purple);
+}
   
-  .custom-select .focus {
+.custom-select .focus {
 	width: 0;
 	height: 0;
 	right: 10px;
@@ -466,10 +468,10 @@ table {
 	pointer-events: none;
 	border-left: 5px solid transparent;
 	border-right: 5px solid transparent;
-	border-top: 10px solid #9b26b0;
-  }
+	border-top: 10px solid var(--purple);
+}
   
-  input[type="submit"] {
+input[type="submit"] {
 	width: 100%;
 	border: none;
 	padding: 25px;
@@ -477,30 +479,31 @@ table {
 	cursor: pointer;
 	font-size: 16px;
 	margin-bottom: 25px;
-	color: #ffffff;
+	color: var(--white);
 	text-transform: uppercase;
-	background-color: #9b26b0;
+	background-color: var(--purple);
   }
   
-  /* ------------------- */
-  footer {
+/* footer section */
+
+footer {
 	padding: 25px;
 	text-align: center;
-	background-color: #eaeaea;
-	font-family: "Montserrat", sans-serif;
-  }
+	background-color: var(--light-gray);
+	font-family: var(--body-font), sans-serif;
+}
   
-  footer a {
+footer a {
 	display: flex;
 	padding-top: 5px;
-	color: #000000;
+	color: var(--black);
 	align-items: center;
 	text-decoration: none;
 	flex-direction: column;
 	justify-content: center;
-  }
+}
   
-  @media screen and (min-width: 700px) {
+@media screen and (min-width: 700px) {
 	header {
 	  padding: 10px;
 	  display: grid;
@@ -643,8 +646,8 @@ table {
 	  width: 45%;
 	  border-radius: 10px;
 	  box-sizing: border-box;
-	  background-color: #55bcd5;
-	  border: 3px solid #ffffff;
+	  background-color: var(--teal);
+	  border: 3px solid var(--white);
 	  justify-content: space-between;
 	}
   
@@ -672,7 +675,7 @@ table {
 	  width: 40%;
 	  border-radius: 10px;
 	  box-sizing: border-box;
-	  border: 1px solid #ffffff;
+	  border: 1px solid var(--white);
 	}
   
 	#testimonials div {
@@ -684,8 +687,8 @@ table {
 	#about {
 	  padding-left: 50px;
 	  padding-right: 50px;
-	  color: #ffffff;
-	  background-color: #499bd2;
+	  color: var(--white);
+	  background-color: var(--blue);
 	}
   
 	#about div {
@@ -731,7 +734,7 @@ table {
 	.form-required {
 	  font-size: 15px;
 	  font-weight: 400;
-	  font-family: "Montserrat", sans-serif;
+	  font-family: var(--body-font), sans-serif;
 	  font-style: italic;
 	}
   
@@ -743,7 +746,7 @@ table {
 	}
   
 	.required {
-	  color: #9b26b0;
+	  color: var(--purple);
 	}
   
 	#contact legend {
@@ -760,7 +763,7 @@ table {
 	  padding: 15px;
 	  font-size: 15px;
 	  margin-bottom: 20px;
-	  border: 2px solid #9b26b0;
+	  border: 2px solid var(--purple);
 	  box-sizing: border-box;
 	}
   
@@ -783,7 +786,7 @@ table {
 	  height: 45px;
 	  position: relative;
 	  border-radius: 50%;
-	  border: 4px solid #9b26b0;
+	  border: 4px solid var(--purple);
 	  margin-bottom: 16px;
 	}
   
@@ -802,22 +805,22 @@ table {
 	  margin-top: 25px;
 	  font-weight: bold;
 	  margin-bottom: 25px;
-	  color: #ffffff;
-	  background-color: #9b26b0;
+	  color: var(--white);
+	  background-color: var(--purple);
 	}
   
 	footer {
 	  font-family: "Montserrat", sans-serif;
 	  gap: 25px;
 	  text-align: center;
-	  background-color: #eaeaea;
+	  background-color: var(--light-gray);
 	  display: flex;
 	  align-items: center;
 	  justify-content: center;
 	}
   
 	footer a {
-	  color: #000000;
+	  color: var(--light-gray);
 	  text-decoration: none;
 	}
   }
@@ -908,7 +911,7 @@ table {
 	#plan {
 	  padding: 25px;
 	  text-align: center;
-	  background-color: #f6d64a;
+	  background-color: var(--yellow);
 	}
   
 	#plan div {
@@ -935,14 +938,14 @@ table {
 	  padding: 15px;
 	  border-radius: 10px;
 	  box-sizing: border-box;
-	  background-color: #55bcd5;
-	  border: 2px solid #ffffff;
+	  background-color: var(--teal);
+	  border: 2px solid var(--white);
 	}
   
 	#plan div section h4 {
 	  text-align: center;
 	  margin-bottom: 10px;
-	  color: #000000;
+	  color: var(--black);
 	}
   
 	#testimonials {
@@ -970,16 +973,16 @@ table {
 	  border-radius: 20px;
 	  margin-bottom: 40px;
 	  box-sizing: border-box;
-	  border: 1px solid #ffffff;
+	  border: 1px solid var(--white);
 	}
   
 	#about {
 	  padding-top: 50px;
 	  padding-left: 50px;
 	  padding-right: 50px;
-	  color: #ffffff;
+	  color: var(--white);
 	  padding-bottom: 50px;
-	  background-color: #499bd2;
+	  background-color: var(--blue);
 	}
   
 	#about h3 {
@@ -1052,8 +1055,8 @@ table {
 	  justify-content: center;
 	  align-items: center;
 	  padding: 20px;
-	  color: #000000;
-	  background-color: #eaeaea;
+	  color: var(--black);
+	  background-color: var(--light-gray);
 	}
   
 	footer p {
@@ -1066,7 +1069,7 @@ table {
 	footer a {
 	  margin-top: 20px;
 	  margin-bottom: 20px;
-	  color: #000000;
+	  color: var(--black);
 	  margin-right: 100px;
 	  text-decoration: none;
 	}
