--- a/styles.css
+++ b/styles.css
@@ -507,8 +507,8 @@ footer a {
 @media screen and (max-width: 600px) {
     header {
         text-align: center;
+        padding: 15px 10px;
         background-color: var(--teal);
-        padding: 20px;
     }
 
     #logo img {
@@ -517,13 +517,13 @@ footer a {
     }
 
     h1 {
-        font-size: 24px;
-        margin: 10px 0;
+        font-size: 22px;
+        margin-top: 5px;
     }
 
     p {
-        font-size: 16px;
-        margin-bottom: 15px;
+        font-size: 14px;
+        margin-bottom: 10px;
     }
 
     #menu-toggle label {
@@ -531,17 +531,17 @@ footer a {
         background-color: var(--dark-gray);
         color: var(--white);
         padding: 10px;
+        font-size: 14px;
         text-align: center;
-        font-size: 16px;
         cursor: pointer;
     }
 
     #menu-toggle ul {
         display: none;
-        list-style: none;
-        margin: 0;
-        padding: 0;
         background-color: var(--teal);
+        padding: 0;
+        margin: 0;
+        list-style: none;
     }
 
     #menu-toggle input:checked ~ ul {
@@ -554,35 +554,31 @@ footer a {
 
     #menu-toggle li a {
         display: block;
-        color: var(--black);
         padding: 15px;
+        font-size: 16px;
+        color: var(--white);
         text-align: center;
-        font-size: 18px;
-    }
-
-    #intro {
-        text-align: center;
-        margin: 20px 0;
     }
 
     #intro h2 {
         font-size: 20px;
+        margin-bottom: 10px;
     }
 
     #intro p {
-        padding: 0 15px;
         font-size: 14px;
+        padding: 0 10px;
     }
 
     #plan {
         background-color: var(--yellow);
-        padding: 15px;
+        padding: 15px 10px;
     }
 
     #plan div {
-        display: grid;
+        display: flex;
+        flex-direction: column;
         gap: 15px;
-        grid-template-columns: 1fr;
     }
 
     #plan section {
@@ -599,21 +595,20 @@ footer a {
     }
 
     #plan section img {
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
     }
 
     #testimonials div {
         display: flex;
         flex-direction: column;
-        gap: 15px;
+        gap: 20px;
         align-items: center;
     }
 
     #testimonials section {
         text-align: center;
-        max-width: 80%;
-        margin: auto;
+        max-width: 90%;
     }
 
     #testimonials img {
@@ -622,20 +617,15 @@ footer a {
         height: 70px;
     }
 
-    #testimonials h4 {
-        font-size: 14px;
-        margin: 5px 0;
-    }
-
     #about {
         background-color: var(--blue);
         color: var(--white);
-        padding: 15px;
+        padding: 20px 10px;
         text-align: center;
     }
 
     #about section {
-        margin: 10px 0;
+        margin-bottom: 15px;
     }
 
     #about section img {
@@ -643,12 +633,8 @@ footer a {
         height: 50px;
     }
 
-    #about h4 {
-        font-size: 14px;
-    }
-
     #contact {
-        padding: 15px;
+        padding: 15px 10px;
     }
 
     #contact label {
@@ -657,14 +643,15 @@ footer a {
 
     input[type="submit"] {
         width: 100%;
-        padding: 10px;
+        padding: 15px;
         font-size: 16px;
         background-color: var(--purple);
         color: var(--white);
+        border-radius: 5px;
     }
 }
 
-/* Medium Width*/
+/* Tablet View*/
 
 @media screen and (min-width: 700px) {
 	header {
@@ -988,7 +975,7 @@ footer a {
 	}
   }
 
-/* Large Screen */
+/* Large Screen*/
   
 @media screen and (min-width: 1335px) {
 	#logo {
